--- a/WeatherReport/Report.html
+++ b/WeatherReport/Report.html
@@ -67,7 +67,7 @@
 			    		"<p>Feels like: "+ model.current.feelslike_f + " °F</p>" +
 			    		"<p>Wind speed: " + model.current.wind_mph + " mph</p></div>"
 			    		);
-			    	
+			    	//jumbotron to create grey background
 			    }
 		
 			}
